# meant4

./: Dockerfile  README.md  pyproject.toml
app/: face_detector.py  main.py  settings.py  websockets.py
app/templates/: base.html
docs/: design_considerations.md  task.md
tests/: test_face_detector.py  test_routes.py  test_websocket_connection_manager.py
